Fix start script typo

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "socket.io": "^4.6.1"
   },
   "scripts": {
-    "start": "ts-node' app.ts",
+    "start": "'ts-node' app.ts",
     "dev": "nodemon --exec 'ts-node' app.ts"
   },
   "devDependencies": {
